<resources>
    <!--    AppBar    -->
    <string name="app_name">MyMarketList</string>
    <string name="catalogue">Catalogo</string>
    <string name="my_list">Mis listas</string>
    <string name="stats">Estadisticas</string>
    <string name="suggest">Sugerir</string>
    <string name="create_account">Crear Cuenta</string>


    <!--    Network Message    -->
    <string name="try_connection">Conectando al servidor…</string>
    <string name="fail_connection">Fallo en la conexion al servidor</string>
    <string name="successful_connection">Conexion al servidor exitosa</string>
    <string name="error_network">Sin conexion a Internet</string>
    <string name="check_network">Compruebe su conexion WI-FI o de datos moviles</string>

    <string name="cheking_data">Comprobando…</string>
    <string name="corrupt_data">Corrupt data</string>
    <string name="checking_backup">Checking Backup</string>
    <string name="error_backup">Error Backup</string>

    <!--    Option Menu    -->
    <string name="alert">Alerta</string>
    <string name="help">Ayuda</string>
    <string name="exit_activity">Si sale de esta pantalla, perderá los datos sin guardar</string>
    <string name="generate_data">Generar Datos</string>

    <!--    Login    -->
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="set_user">Inserte Usuario</string>
    <string name="set_password">Inserte Contraseña</string>
    <string name="access">Acceder</string>
    <string name="user_not_exist">Este usuario no existe</string>
    <string name="error_get_user_data">Error al obtener los datos del usuario</string>
    <string name="user_successfully_registered">Usuario registrado con exito</string>
    <string name="user_not_registered">Usuario no registrado</string>
    <string name="successful_log_out">Sesion cerrada con exito</string>
    <string name="error_insert_user_data">Error al guardar el usuario</string>

    <!--    Register    -->
    <string name="sign_up">Registrarse</string>
    <string name="camera">Camara</string>
    <string name="gallery">Galeria</string>
    <string name="email">Correo</string>
    <string name="set_valid_username">Inserte un usuario valido</string>
    <string name="set_valid_password">Inserte una contraseña valida</string>
    <string name="set_valid_email">Inserte un email valido</string>
    <string name="user_exist">Este usuario ya existe</string>
    <string name="error_create_user">Error al crear usuario</string>
    <string name="select_image">Seleccione una Imagen</string>
    <string name="error_get_image">Error al obtener la imagen</string>
    <string name="deny_permissions">Permiso denegado</string>
    <string name="permissions_required_title">Permisos</string>
    <string name="permissions_required_message">Se requieren permisos para poder continuar</string>
    <string name="settings">Ajustes</string>

    <!--    Control Panel   -->
    <!--    Bottom Nav1    -->
    <string name="nav1_lists">Listas</string>
    <string name="successful_create_list">Lista creada con exito</string>
    <string name="error_create_list">Error al crear la lista</string>
    <!--    Bottom Nav2    -->
    <string name="nav2_more">Más</string>
    <string name="about">Información</string>
    <string name="log_out">Cerrar sesion</string>

    <!--    Catalogue    -->
    <string name="clear_list">Limpiar lista</string>
    <string name="items_selected">Productos seleccionados:</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="clear_list_message">Se borraran todos los productos marcados y empezará de nuevo</string>
    <!--    <string name="make_list_message">Se creara una lista con el siguiente nombre:\t</string>-->
    <!--    <string name="want_continue">\n¿Desea continuar?</string>-->
    <string name="make_list_name">Ponga un nombre para la lista:</string>
    <string name="please_put_name">Por favor, ingrese un nombre</string>
    <string name="choose_item">Seleccione un producto para continuar</string>

    <!--    Show & Edit List    -->
    <string name="name_of_list">Nombre de la lista</string>
    <string name="try_again_later">Intentelo de nuevo mas tarde cuando tenga conexion</string>
    <!--    <string name="online">Online</string>-->
    <string name="list_date">Fecha de compra</string>
    <string name="list_price">Precio de compra (€)</string>
    <string name="set_valid_price">Inserte precio valido (123.45)</string>
    <string name="set_date">Inserte fecha</string>
    <string name="successful_edit_list">Lista editada con exito</string>
    <string name="error_edit_list">Error al editar la lista</string>

    <!--    Stats    -->
    <string name="bills">Gastos</string>


    <!--    Suggests    -->
    <string name="in_maintenance">En mantenimiento</string>
    <string name="subject">Asunto</string>
    <string name="message">Mensaje</string>
    <string name="send">Enviar</string>
    <string name="error_send_suggest">Error al enviar la sugerencia</string>
    <string name="set_subject">Inserte asunto</string>
    <string name="set_message">Inserte mensaje</string>
    <string name="successful_send_suggest">Sugerencia enviada con exito</string>
    <string name="about_me">Desarrollado por:\nJavier Botella Muñoz</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>